--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
       <div class="form_container">
         <h1>LeafletJS</h1>
-        <form>
+        <form id="form">
           <label for="name">Name:</label>
-          <input type="text" required class="form-control" id="name" />
+          <input type="text" class="form-control" id="name" required />
 
           <label for="date">Date:</label>
           <!-- PUT REQUIRED LATER HERE -->
@@ -71,38 +71,46 @@
               value="Clear"
               id="clear"
             />
+            <input
+              type="button"
+              class="form-control"
+              value="Cancel"
+              id="cancel"
+            />
             <input type="submit" class="form-control" id="submit" />
           </div>
         </form>
       </div>
     </div>
 
-    <!-- SEARCH BOX -->
-    <div class="group">
-      <svg class="icon" aria-hidden="true" viewBox="0 0 24 24">
-        <g>
-          <path
-            d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"
-          ></path>
-        </g>
-      </svg>
-      <input placeholder="Search" type="search" class="search_box" />
-    </div>
+    <div class="bottom">
+      <!-- SEARCH BOX -->
+      <div class="group">
+        <svg class="icon" aria-hidden="true" viewBox="0 0 24 24">
+          <g>
+            <path
+              d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"
+            ></path>
+          </g>
+        </svg>
+        <input placeholder="Search" type="search" id="searchInput" />
+      </div>
 
-    <!-- NOTES -->
-    <div class="notes_area">
-      <div class="notes_container" data-key="123123">
-        <div class="notes">
-          <p>Name: Demo Note</p>
-          <p>Date: 11/12/2023</p>
-          <p>Time: 11:59 pm</p>
-          <p>Location: Something very looooooooooooooooooong</p>
-          <p>Notes: 11111111111111111111111111111111</p>
-        </div>
-        <div class="components">
-          <button class="edit"></button>
-          <button class="delete"></button>
-          <button class="share"></button>
+      <!-- NOTES -->
+      <div class="notes_area">
+        <div class="notes_container" data-key="123123">
+          <div class="notes">
+            <p>Name: Demo Note</p>
+            <p>Date: 11/12/2023</p>
+            <p>Time: 11:59 pm</p>
+            <p>Location: Something very looooooooooooooooooong</p>
+            <p>Notes: 11111111111111111111111111111111</p>
+          </div>
+          <div class="components">
+            <button class="edit"></button>
+            <button class="delete"></button>
+            <button class="share"></button>
+          </div>
         </div>
       </div>
     </div>
