Optimized js code

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="main.js" type="module"></script>
   </head>
   <body>
     <div class="header">
@@ -97,8 +96,8 @@
       </div>
 
       <!-- NOTES -->
-      <div class="notes_area">
-        <div class="notes_container" data-key="123123">
+      <div class="notesArea">
+        <div class="notesContainer" data-key="123123">
           <div class="notes">
             <p>Name: Demo Note</p>
             <p>Date: 11/12/2023</p>
@@ -106,7 +105,7 @@
             <p>Location: Something very looooooooooooooooooong</p>
             <p>Notes: 11111111111111111111111111111111</p>
           </div>
-          <div class="components">
+          <div class="noteTools">
             <button class="edit"></button>
             <button class="delete"></button>
             <button class="share"></button>
@@ -114,5 +113,7 @@
         </div>
       </div>
     </div>
+
+    <script src="main.js" type="module"></script>
   </body>
 </html>
